--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 			<div id="sidebar">
 
 				<!-- Logo -->
-					<h1 id="logo"><a href="#">STRIPED</a></h1>
+					<h1 id="logo"><a href="#">Valerie Liu</a></h1>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="#">Latest Post</a></li>
-							<li><a href="#">Archives</a></li>
-							<li><a href="#">About Me</a></li>
+							<li><a href="current">About Me</a></li>
+							<!-- <li><a href="#">Archives</a></li> -->
+							<li class="#"><a href="#">Latest Post</a></li>
 							<li><a href="#">Contact Me</a></li>
 						</ul>
 					</nav>
@@ -161,7 +161,7 @@
 						</ul>
 					</section>
 
-				<!-- Calendar -->
+				<!-- Calendar
 					<section class="box calendar">
 						<div class="inner">
 							<table>
@@ -221,11 +221,11 @@
 								</tbody>
 							</table>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Copyright -->
 					<ul id="copyright">
-						<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Valerie Liu.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
